# templates

./: README.md
python/api-mongo/{{cookiecutter.project_name}}/: Dockerfile  docker-compose.yml  pyproject.toml
python/api-mongo/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/: config.py  main.py
python/api-mongo/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/db/: mongo.py
python/api-mongo/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/router/: {{cookiecutter.entity_name}}.py
python/api-mongo/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/services/: service_provider.py  {{cookiecutter.entity_name}}.py
python/api-mysql/{{cookiecutter.project_name}}/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
python/api-mysql/{{cookiecutter.project_name}}/local-setup/: generate_env.sh
python/api-mysql/{{cookiecutter.project_name}}/local-setup/sql/: V0.1.0__create_table.sql  V0.1.1__insert_data.sql
python/api-mysql/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/: config.py  main.py
python/api-mysql/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/db/: sql.py
python/api-mysql/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/model/: __init__.py  {{cookiecutter.table_name}}.py
python/api-mysql/{{cookiecutter.project_name}}/{{ cookiecutter.project_name.replace("-", "_") }}/router/: {{cookiecutter.table_name}}.py
(+6 files in other folders)
