[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.api_description}}"
authors = ["{{cookiecutter.authors}}"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pymongo = "^4.10.1"
pytest = "^8.3.1"
httpx = "^0.27.0"
uvicorn = "^0.30.3"
fastapi = "^0.111.1"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
